--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^9.0.2",
     "errorhandler": "^1.5.1",
     "express": "~4.16.1",
     "express-validator": "^6.11.1",
